app-logging/kibana.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-appslogs
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: kibana.home.local
    http:
      paths:
      - backend:
          service:
            name: kibana-appslogs-kb-http 
            port:
              number: 5601
        path: /
        pathType: ImplementationSpecific
